# Ionwake

./: .gitignore  CMakeLists.txt  Makefile  README  a.out  constants.h  converter.cpp  converter.h  description  error.6164  error.6186  error.6194  error.6195  error.6266  error.6334  error.6335  error.6434  error.6514  error.6564  error.6565  ionwake.config  kinetic.cpp  kinetic.h  launch  log.6164  log.6182  log.6183  log.6184  log.6187  log.6190  log.6191  log.6192  log.6194  log.6195  log.6266  log.6334  log.6335  log.6434  log.6514  log.6563  (+9 more)
data/: ForceField.vti  script
html/: annotated.html  classconverter-members.html  classconverter.html  classes.html  classkinetic-members.html  classkinetic.html  classoutput-members.html  classoutput.html  classpoisson-members.html  classpoisson.html  converter_8cpp.html  converter_8h.html  converter_8h_source.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  kinetic_8cpp.html  kinetic_8h.html  kinetic_8h_source.html  main_8cpp.html  menudata.js  output_8cpp.html  output_8h.html  output_8h_source.html  poisson_8cpp.html  poisson_8h.html  poisson_8h_source.html
latex/: annotated.tex  classconverter.tex  classkinetic.tex  classoutput.tex  classpoisson.tex  converter_8cpp.tex  converter_8h.tex  files.tex  kinetic_8cpp.tex  kinetic_8h.tex  main_8cpp.tex  output_8cpp.tex  output_8h.tex  poisson_8cpp.tex  poisson_8h.tex  refman.tex
src/: Makefile  TArray.cpp  TArray.h  TScheme.cpp  TScheme.h  constants.h  converter.cpp  converter.h  converter.hpp  main.cpp  poisson.cpp  scheme.cpp  (+1 more)
(+59 files in other folders)
